--- a/styles/map.css
+++ b/styles/map.css
@@ -1,11 +1,14 @@
+@import "globals.css";
 
 .map-container {
-
+    @apply flex justify-center items-center;
 }
 
 .map-container svg {
-    width: 100%;
-    height: 100%;
+    aspect-ratio: 1417 / 915;
+    width: auto;
+    height: 90%;
+    max-height: 100%;
     touch-action: none;
 }
 
