--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-    body {
-        @apply overflow-x-hidden overflow-y-auto font-serif;
-    }
+/*@layer base {*/
+body {
+    @apply overflow-x-hidden overflow-y-auto font-serif;
 }
+
+/*}*/
